--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,9 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    border: none;
-    outline: none;
-    font-weight: 300;
     box-sizing: border-box;
 }
 
@@ -12,10 +9,10 @@ a{
     color: black;
 }
 
-ul{
-    list-style-type: none;
-}
-
 img{
     max-width: 100%;
+}
+
+ul{
+    list-style: none;
 }
