--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,115 +3,138 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap'); */
 
 
-html{
+html {
     font-size: 62.5%;
 }
 
-body{
-    background: url(../images/bg-desktop.svg);
+body {
+    background: url(../images/bg-desktop.svg) no-repeat;
     font-size: 2.5rem;
-    background-color:  hsl(257, 40%, 49%);
-    background-repeat: no-repeat;
+    font-family: 'Poppins', 'Open Sans', sans-serif;
+    font-weight: 400;
+    /* background-size: cover; */
+    background-color: var(--primary-color);
+    grid-template-areas: "header"
+                         "about"
+                         "footer";
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
- .header{
-    grid-area: header;
+/* ---HEADER--- */
+
+.header {
     display: flex;
     align-items: center;
-    margin-left: 75px;
-    margin-top: 35px;
-    margin-bottom: 90px;
+    margin: 50px 70px;
 }
 
- .about{
-    grid-area: about;
+.header img {
+    width: 200px;
+}
+
+/* ---ABOUT--- */
+
+.about {
     display: flex;
-    grid-template-columns: 1fr 1fr;
-    /* colocar grid-template-columns para poder colocar ao lado o texto */
 }
 
- .about .image{
+.about .image {
     display: flex;
     height: 50%;
     width: 50%;
     margin-left: 80px;
 }
 
-.about .info{
+.about .info {
     display: flex;
     padding: 50px 50px;
     flex-direction: column;
-    justify-content: left;
-    align-items: start;
-    margin-right: 360px;
+    justify-content: flex-start;
+    align-content: flex-start;
+    margin-right: 330px;
     margin-left: 50px;
-  
 }
 
-.about .info h2{
-    font-weight: 600;
-    font-family: 'Poppins', sans-serif;
-    font-size: 3rem;
+.about .info h2 {
+    font-size: 4rem;
     color: white;
-    margin-right: 150px;
+    font-weight: 600;
 }
 
-.about .info p{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 1.8rem;
+.about .info p {
+    font-size: 1.7rem;
     margin: 30px 0px;
     color: white;
+    /* font-weight: 400; */
 }
 
-.about .info a{
-  color:  hsl(257, 40%, 49%);
-  background-color: white;
-  box-shadow: 2px 2px 1px #000;;
-  border-radius: 30px;  
-  display: flex;
-  height: 50px;
-  width: 200px;
+.about .info a {
+    color: var(--primary-color);
+    background-color: white;
+    box-shadow: 2px 2px 1px #000;
+    border-radius: 30px;
+    display: flex;
+    height: 50px;
+    width: 200px;
+    transition: ease-in-out 0.2s;
 }
 
-.about .btn{
+.about .btn {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
 }
 
-.about .btn:hover{
+.about .btn:hover {
     color: white;
-    background-color: hsl(300, 69%, 71%);
+    background-color: var(--icon-hover-color);
 }
 
-.footer nav{
+@media (max-width: 425px) {
+    .about{
+        text-align: center;
+    }
+
+    
+}
+
+/* ---FOOTER--- */
+
+.footer {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    margin-right: 420px;
+    /* margin-right: 370px; */
+    justify-content: center;
 }
 
-.footer .social a{
+.footer .social {
+    display: flex;
+    justify-content: center;
+    margin: 50px;
+    padding: 20px;
+}
+
+.footer .social li a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px;
     border-radius: 50%;
     border: 2px solid white;
     width: 50px;
-    height:50px;
+    height: 50px;
     color: white;
+    transition: 0.3s;
 }
 
-.footer .social a:hover{
-    color:  hsl(300, 69%, 71%);
-}
-
-@media (max-width: 1440px) {
-    .about img{
-        width: 100%;
-    }
-}
+.footer .social li a:hover {
+    color: var(--icon-hover-color);
+    border: 2px solid;
     
+}
+
+/* @media (max-width: 425px) {
+    .footer{
+        
+    }
+} */
