--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap'); */
-
-
 html {
     font-size: 62.5%;
 }
@@ -12,7 +7,7 @@ body {
     font-size: 2.5rem;
     font-family: 'Poppins', 'Open Sans', sans-serif;
     font-weight: 400;
-    /* background-size: cover; */
+    color: white;
     background-color: var(--primary-color);
     grid-template-areas: "header"
                          "about"
@@ -30,7 +25,7 @@ body {
 }
 
 .header img {
-    width: 200px;
+    width: 250px;
 }
 
 /* ---ABOUT--- */
@@ -51,22 +46,18 @@ body {
     padding: 50px 50px;
     flex-direction: column;
     justify-content: flex-start;
-    align-content: flex-start;
     margin-right: 330px;
     margin-left: 50px;
 }
 
 .about .info h2 {
-    font-size: 4rem;
-    color: white;
+    font-size: 4.5rem;
     font-weight: 600;
 }
 
 .about .info p {
     font-size: 1.7rem;
     margin: 30px 0px;
-    color: white;
-    /* font-weight: 400; */
 }
 
 .about .info a {
@@ -93,26 +84,23 @@ body {
 }
 
 @media (max-width: 425px) {
-    .about{
-        text-align: center;
+    .about {
+     flex-wrap: wrap;
     }
-
-    
 }
 
 /* ---FOOTER--- */
 
 .footer {
     display: flex;
-    /* margin-right: 370px; */
-    justify-content: center;
+    justify-content: flex-end;
+    align-content: flex-end;
+    
 }
 
 .footer .social {
     display: flex;
-    justify-content: center;
     margin: 50px;
-    padding: 20px;
 }
 
 .footer .social li a {
@@ -127,14 +115,14 @@ body {
     transition: 0.3s;
 }
 
-.footer .social li a:hover {
+..footer .social li a:hover {
     color: var(--icon-hover-color);
     border: 2px solid;
-    
+
 }
 
-/* @media (max-width: 425px) {
-    .footer{
-        
+@media (max-width: 425px) {
+    .footer {
+        flex-wrap: wrap;
     }
-} */
+}
