--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,9 +9,6 @@ body {
     font-weight: 400;
     color: white;
     background-color: var(--primary-color);
-    grid-template-areas: "header"
-                         "about"
-                         "footer";
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
@@ -20,18 +17,20 @@ body {
 
 .header {
     display: flex;
-    align-items: center;
     margin: 50px 70px;
+    position: relative;
 }
 
 .header img {
     width: 250px;
+    margin: 13px;
 }
 
-/* ---ABOUT--- */
+/* ---SECTION--- */
 
 .about {
     display: flex;
+    min-height: 30px;
 }
 
 .about .image {
@@ -45,9 +44,11 @@ body {
     display: flex;
     padding: 50px 50px;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-right: 330px;
+    margin-right: 350px; 
     margin-left: 50px;
+    text-align: initial;
+    
+    
 }
 
 .about .info h2 {
@@ -83,24 +84,19 @@ body {
     background-color: var(--icon-hover-color);
 }
 
-@media (max-width: 425px) {
-    .about {
-     flex-wrap: wrap;
-    }
-}
-
 /* ---FOOTER--- */
 
 .footer {
     display: flex;
-    justify-content: flex-end;
-    align-content: flex-end;
-    
+    margin: 0 65%;
 }
-
 .footer .social {
     display: flex;
-    margin: 50px;
+    margin: 30px;
+}
+
+.footer .social a{
+    margin: 10px;
 }
 
 .footer .social li a {
@@ -112,17 +108,12 @@ body {
     width: 50px;
     height: 50px;
     color: white;
-    transition: 0.3s;
+    transition: ease-in-out.3s;
 }
 
-..footer .social li a:hover {
+.footer .social li a:hover {
     color: var(--icon-hover-color);
     border: 2px solid;
 
 }
 
-@media (max-width: 425px) {
-    .footer {
-        flex-wrap: wrap;
-    }
-}
