--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@ body {
     background-color: var(--primary-color);
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    background-size: cover
 }
 
 /* ---HEADER--- */
@@ -38,6 +39,7 @@ body {
     height: 50%;
     width: 50%;
     margin-left: 80px;
+   
 }
 
 .about .info {
