--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 62.5%;
+    font-size: 50%;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     background-color: var(--primary-color);
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-size: cover
+    background-size: cover;
 }
 
 /* ---HEADER--- */
@@ -39,7 +39,6 @@ body {
     height: 50%;
     width: 50%;
     margin-left: 80px;
-   
 }
 
 .about .info {
@@ -49,29 +48,33 @@ body {
     margin-right: 50px; 
     margin-left: 20px;
     text-align: initial;
-    
-    
+    max-width: 500px;
 }
 
 .about .info h2 {
+    max-width: 450px;
     font-size: 4.5rem;
     font-weight: 600;
+    max-width: 500px;
 }
 
 .about .info p {
+    max-width: 450px;
     font-size: 1.7rem;
     margin: 30px 0px;
+    max-width: 500px;
 }
 
 .about .info a {
     color: var(--primary-color);
     background-color: white;
-    box-shadow: 1px 1px 1px #000;
-    border-radius: 30px;
-    display: flex;
+    box-shadow: 5px 2px 15px  black;
+    border-radius: 50px;
     height: 50px;
     width: 200px;
     transition: ease-in-out 0.2s;
+    /* mix-blend-mode: screen; */
+    
 }
 
 .about .btn {
@@ -94,7 +97,6 @@ body {
 }
 .footer .social {
     display: flex;
-    margin: 30px;
 }
 
 .footer .social a{
@@ -110,12 +112,12 @@ body {
     width: 50px;
     height: 50px;
     color: white;
-    transition: ease-in-out.3s;
+    transition: 0.3s;
 }
 
 .footer .social li a:hover {
     color: var(--icon-hover-color);
-    border: 2px solid;
+    border: 1px solid;
 
 }
 
